fixed overflow issues

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,5 +21,5 @@ html, body, #root, #root>div {
 }
 
 html {
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
